Sequence game ready

--- a/app/src/main/res/layout/fragment_sequence_game.xml
+++ b/app/src/main/res/layout/fragment_sequence_game.xml
@@ -11,46 +11,56 @@
         android:layout_width="369dp"
         android:layout_height="90dp"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/Fila2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.379">
+        app:layout_constraintStart_toStartOf="parent">
 
         <ImageButton
             android:id="@+id/image1"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@android:drawable/ic_delete" />
+            android:background="#00BCD4"
+            android:scaleType="fitCenter"
+            android:src="@drawable/idk" />
 
         <ImageButton
             android:id="@+id/image2"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@android:drawable/ic_delete" />
+            android:background="#00BCD4"
+            android:scaleType="fitCenter"
+            android:src="@drawable/idk"
+            tools:src="@drawable/idk" />
 
         <ImageButton
             android:id="@+id/image3"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@android:drawable/ic_delete" />
+            android:background="#00BCD4"
+            android:scaleType="fitCenter"
+            android:src="@drawable/idk" />
 
         <ImageButton
             android:id="@+id/image4"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@android:drawable/ic_delete" />
+            android:background="#00BCD4"
+            android:scaleType="fitCenter"
+            android:src="@drawable/idk" />
 
         <ImageButton
             android:id="@+id/image5"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@android:drawable/ic_delete" />
+            android:background="#00BCD4"
+            android:scaleType="fitCenter"
+            android:src="@drawable/idk"
+            tools:src="@drawable/idk" />
     </LinearLayout>
 
     <LinearLayout
@@ -58,46 +68,59 @@
         android:layout_width="369dp"
         android:layout_height="90dp"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/Fila3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.519">
+        app:layout_constraintStart_toStartOf="parent">
 
         <ImageButton
             android:id="@+id/image6"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@android:drawable/ic_delete" />
+            android:background="#00BCD4"
+            android:scaleType="fitCenter"
+            android:src="@drawable/idk"
+            tools:src="@drawable/idk" />
 
         <ImageButton
             android:id="@+id/image7"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@android:drawable/ic_delete" />
+            android:background="#00BCD4"
+            android:scaleType="fitCenter"
+            android:src="@drawable/idk"
+            tools:src="@drawable/idk" />
 
         <ImageButton
             android:id="@+id/image8"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@android:drawable/ic_delete" />
+            android:background="#00BCD4"
+            android:scaleType="fitCenter"
+            android:src="@drawable/idk"
+            tools:src="@drawable/idk" />
 
         <ImageButton
             android:id="@+id/image9"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@android:drawable/ic_delete" />
+            android:background="#00BCD4"
+            android:scaleType="fitCenter"
+            android:src="@drawable/idk"
+            tools:src="@drawable/idk" />
 
         <ImageButton
             android:id="@+id/image10"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@android:drawable/ic_delete" />
+            android:background="#00BCD4"
+            android:scaleType="fitCenter"
+            android:src="@drawable/idk"
+            tools:src="@drawable/idk" />
     </LinearLayout>
 
     <LinearLayout
@@ -105,46 +128,59 @@
         android:layout_width="369dp"
         android:layout_height="90dp"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/Fila4"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.659">
+        app:layout_constraintStart_toStartOf="parent">
 
         <ImageButton
             android:id="@+id/image11"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@android:drawable/ic_delete" />
+            android:background="#00BCD4"
+            android:scaleType="fitCenter"
+            android:src="@drawable/idk"
+            tools:src="@drawable/idk" />
 
         <ImageButton
             android:id="@+id/image12"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@android:drawable/ic_delete" />
+            android:background="#00BCD4"
+            android:scaleType="fitCenter"
+            android:src="@drawable/idk"
+            tools:src="@drawable/idk" />
 
         <ImageButton
             android:id="@+id/image13"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@android:drawable/ic_delete" />
+            android:background="#00BCD4"
+            android:scaleType="fitCenter"
+            android:src="@drawable/idk"
+            tools:src="@drawable/idk" />
 
         <ImageButton
             android:id="@+id/image14"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@android:drawable/ic_delete" />
+            android:background="#00BCD4"
+            android:scaleType="fitCenter"
+            android:src="@drawable/idk"
+            tools:src="@drawable/idk" />
 
         <ImageButton
             android:id="@+id/image15"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@android:drawable/ic_delete" />
+            android:background="#00BCD4"
+            android:scaleType="fitCenter"
+            android:src="@drawable/idk"
+            tools:src="@drawable/idk" />
     </LinearLayout>
 
     <LinearLayout
@@ -152,104 +188,144 @@
         android:layout_width="369dp"
         android:layout_height="90dp"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/Fila5"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.8">
+        app:layout_constraintStart_toStartOf="parent">
 
         <ImageButton
             android:id="@+id/image16"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@android:drawable/ic_delete" />
+            android:background="#00BCD4"
+            android:scaleType="fitCenter"
+            android:src="@drawable/idk"
+            tools:src="@drawable/idk" />
 
         <ImageButton
             android:id="@+id/image17"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@android:drawable/ic_delete" />
+            android:background="#00BCD4"
+            android:scaleType="fitCenter"
+            android:src="@drawable/idk"
+            tools:src="@drawable/idk" />
 
         <ImageButton
             android:id="@+id/image18"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@android:drawable/ic_delete" />
+            android:background="#00BCD4"
+            android:scaleType="fitCenter"
+            android:src="@drawable/idk"
+            tools:src="@drawable/idk" />
 
         <ImageButton
             android:id="@+id/image19"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@android:drawable/ic_delete" />
+            android:background="#00BCD4"
+            android:scaleType="fitCenter"
+            android:src="@drawable/idk"
+            tools:src="@drawable/idk" />
 
         <ImageButton
             android:id="@+id/image20"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@android:drawable/ic_delete" />
+            android:background="#00BCD4"
+            android:scaleType="fitCenter"
+            android:src="@drawable/idk"
+            tools:src="@drawable/idk" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/Fila5"
         android:layout_width="369dp"
         android:layout_height="90dp"
+        android:layout_marginBottom="16dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.94">
+        app:layout_constraintStart_toStartOf="parent">
 
         <ImageButton
             android:id="@+id/image21"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@android:drawable/ic_delete" />
+            android:background="#00BCD4"
+            android:scaleType="fitCenter"
+            android:src="@drawable/idk"
+            tools:src="@drawable/idk" />
 
         <ImageButton
             android:id="@+id/image22"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@android:drawable/ic_delete" />
+            android:background="#00BCD4"
+            android:scaleType="fitCenter"
+            android:src="@drawable/idk"
+            tools:src="@drawable/idk" />
 
         <ImageButton
             android:id="@+id/image23"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@android:drawable/ic_delete" />
+            android:background="#00BCD4"
+            android:scaleType="fitCenter"
+            android:src="@drawable/idk"
+            tools:src="@drawable/idk" />
 
         <ImageButton
             android:id="@+id/image24"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@android:drawable/ic_delete" />
+            android:background="#00BCD4"
+            android:scaleType="fitCenter"
+            android:src="@drawable/idk"
+            tools:src="@drawable/idk" />
 
         <ImageButton
             android:id="@+id/image25"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@android:drawable/ic_delete" />
+            android:background="#00BCD4"
+            android:scaleType="fitCenter"
+            android:src="@drawable/idk"
+            tools:src="@drawable/idk" />
     </LinearLayout>
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/nivelText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="96dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginBottom="8dp"
         android:fontFamily="sans-serif-black"
         android:text="Nivel: 2"
         android:textSize="30sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/Fila1"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/vidasText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="28dp"
+        android:layout_marginBottom="8dp"
+        android:fontFamily="sans-serif-black"
+        android:text="Vidas: 3"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toTopOf="@+id/Fila1"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
