--- a/app/src/main/res/layout/fragment_sequence_game.xml
+++ b/app/src/main/res/layout/fragment_sequence_game.xml
@@ -308,24 +308,24 @@
         android:id="@+id/nivelText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:fontFamily="sans-serif-black"
         android:text="Nivel: 2"
         android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/Fila1"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/vidasText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="28dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="20dp"
         android:fontFamily="sans-serif-black"
         android:text="Vidas: 3"
         android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/Fila1"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
